updated to version 1.4.0 to include the Macrostrat API

--- a/assets/assets/lang/ca.json
+++ b/assets/assets/lang/ca.json
@@ -13,8 +13,6 @@
   "myRecords": "Els meus registres",
   "settings": "Configuració",
   "logout": "Tancar sessió",
-  "login": "Iniciar sessió",
-  "register": "Registrar-se",
   "language": "Idioma",
   "theme": "Tema",
   "systemTheme": "Tema del sistema",
@@ -22,7 +20,6 @@
   "darkTheme": "Tema fosc",
   "submit": "Enviar",
   "cancel": "Cancel·lar",
-  "search": "Cercar",
   "selectColumns": "Selecciona columnes",
   "ok": "D'acord",
   "noData": "Sense dades",
@@ -61,7 +58,7 @@
   "profileLinkLabel": "Enllaç del perfil",
   "acceptToAppearText": "Accepto aparèixer a l'aplicació com a expert perquè altres usuaris em puguin trobar",
   "submitButton": "Enviar i iniciar sessió amb Google",
-  "dataSubmittedDescription":"Les teves dades s'han enviat correctament",
+  "dataSubmittedDescription": "Les teves dades s'han enviat correctament",
   "dataSubmittedMessage": "Dades enviades amb èxit",
   "noteLoginResearcher": "Nota: La propera vegada pots iniciar sessió com a usuari normal",
   "errorProfileLinkLabel": "Si us plau, introdueix una URL vàlida",
@@ -112,7 +109,6 @@
   "source": "Font",
   "progress": "Progrés",
   "title": "Títol",
-  "thumbnail": "Miniatura",
   "description": "Descripció",
   "creator": "Creador",
   "inCollection": "En col·lecció",
@@ -217,8 +213,6 @@
   "enterCity": "Introdueix la ciutat",
   "enterState": "Introdueix l'estat",
   "enterCountry": "Introdueix el país",
-  "pickLocation": "Selecciona ubicació",
-  "selectedLocation": "Ubicació seleccionada",
   "enterPrice": "Introdueix el preu o selecciona Gratuït",
   "enterOrganizer": "Introdueix l'organitzador",
   "targetAudience": "Públic objectiu",
@@ -264,7 +258,6 @@
   "museumDetails": "Detalls del Museu",
   "database": "Base de Dades",
   "deleteLocalDatabases": "Eliminar les Bases de Dades Locals",
-  "localDatabaseCleared": "Base de dades local esborrada",
   "translations": "Traduccions",
   "translators": "Traductors",
   "supportUs": "Dóna'ns suport",
@@ -310,7 +303,6 @@
   "taxon": "Tàxon",
   "pbdbOccurrenceId": "ID d'Ocurrència PBDB",
   "viewFullDetails": "Veure Detalls Complets",
-  "member": "Membre",
   "reference": "Referència",
   "viewMediaAndReferences": "Veure mitjans i referències",
   "viewOnApp": "Veure a Where is my fossil",
@@ -344,7 +336,6 @@
   "selectType": "Si us plau, selecciona un tipus",
   "selectDeadline": "Si us plau, selecciona una data límit",
   "enterInstitution": "Si us plau, introdueix una institució",
-  "enterLocation": "Si us plau, introdueix una ubicació",
   "enterDescription": "Si us plau, introdueix una descripció",
   "enterRequirements": "Si us plau, introdueix requisits",
   "enterApplicationUrl": "Si us plau, introdueix una URL d'aplicació",
@@ -358,6 +349,10 @@
   "opportunityIntroText": "Envia una nova oportunitat en paleontologia",
   "opportunityLoginRequired": "Inicia sessió per enviar una nova oportunitat",
   "selectLocationOnMap": "Selecciona la ubicació al mapa",
+  "searchLocation": "Cerca una ubicació...",
+  "noLocationsFound": "No s'ha trobat ubicacions",
+  "confirm": "Confirma",
+  "myLocation": "La meva ubicació",
   "selectColor": "Selecciona color",
   "changeChartColor": "Canvia el color del gràfic",
   "filterTerms": "Termes de filtre",
@@ -382,20 +377,110 @@
   "subUnits": "subunitats",
   "searchTimeUnits": "Cercar unitats de temps...",
   "noResultsFound": "No s'han trobat resultats per a",
-  "tapToNavigate": "Fes clic a una unitat de temps per navegar pel gràfic",
-  "returnToTopLevel": "Tornar al Nivell Superior",
   "noDataAvailable": "No hi ha dades disponibles",
-  "errorLoadingChronoData": "Error en carregar les dades",
-  "cannotNavigateTo": "No es pot navegar a",
   "eon": "Eó",
   "era": "Era",
   "period": "Període",
   "epoch": "Època",
   "age": "Edat",
-  "showAges": "Mostrar Edats",
-  "showEpochs": "Mostrar Èpoques",
-  "showPeriods": "Mostrar Períodes",
-  "showEras": "Mostrar Eres",
-  "showEons": "Mostrar Eons",
-  "resetView": "Restablir Vista"
+  "geologicalPeriod": "Període Geològic",
+  "comments": "Comentaris",
+  "dataSources": "Fonts de Dades",
+  "geologicalDataSources": "Fonts de dades geològiques:",
+  "sourceId": "ID de Font:",
+  "aboutGeologyData": "Sobre aquestes dades",
+  "andesite": "Andesita",
+  "arkose": "Arcosa",
+  "basalt": "Basalt",
+  "bedrock": "Mapa geològic",
+  "breccia": "Bretxa",
+  "cambrian": "Cambrià",
+  "carboniferous": "Carbonífer",
+  "cenozoic": "Cenozoic",
+  "chert": "Sílex",
+  "claystone": "Argilita",
+  "coal": "Carbó",
+  "conglomerate": "Conglomerat",
+  "cretaceous": "Cretaci",
+  "dacite": "Dacita",
+  "devonian": "Devonià",
+  "diorite": "Diorita",
+  "dolomite": "Dolomita",
+  "dolostone": "Dolomia",
+  "evaporite": "Evaporita",
+  "gabbro": "Gabro",
+  "geologicalInfo": "Informació geològica",
+  "geology": "Geologia",
+  "geologyDataDescription": "Les dades geològiques són proporcionades per MacroStrat, una plataforma per a la integració i visualització de dades geològiques.",
+  "geologyDataSource": "Les dades inclouen tipus de roques, edats geològiques i informació estratigràfica d'estudis geològics globals.",
+  "geologyFeatureDescription": "Ara pots veure capes de mapes geològics per entendre la història antiga sota els fòssils. Aquesta funció utilitza l'API MacroStrat per mostrar dades geològiques inclosos tipus de roques, formacions i edats.",
+  "geologyStep1": "Toca la icona de capes a la part inferior esquerra del mapa per activar/desactivar la capa de geologia.",
+  "geologyStep2": "Selecciona 'Mapa geològic' per veure tipus de roques, formacions i edats geològiques.",
+  "geologyStep3": "Ajusta el control lliscant d'opacitat per combinar la capa geològica amb el mapa base.",
+  "geologyStep4": "Toca el botó 'Informació geològica' per obtenir detalls sobre la geologia al centre del mapa.",
+  "gneiss": "Gneis",
+  "granite": "Granit",
+  "graywacke": "Grauvaca",
+  "gypsum": "Guix",
+  "hideGeologyLayer": "Amagar capa de geologia",
+  "hornfels": "Cornubianita",
+  "howToUseGeologyLayer": "Com utilitzar aquesta funció",
+  "igneous": "Ígnea",
+  "jurassic": "Juràssic",
+  "limestone": "Calcària",
+  "loadingStratigraphicData": "Carregant dades estratigràfiques...",
+  "loadingUnits": "Carregant unitats...",
+  "localDatabasesCleared": "Base de dades local esborrada",
+  "marl": "Margues",
+  "marble": "Marbre",
+  "mesozoic": "Mesozoic",
+  "metamorphic": "Metamòrfica",
+  "migmatite": "Migmatita",
+  "millionYearsAgo": "Milions d'anys enrere",
+  "mudstone": "Lutita",
+  "multipleColumnsFound": "S'han trobat múltiples columnes",
+  "neogene": "Neogen",
+  "newFeature": "Nova funció!",
+  "noGeologyData": "No hi ha dades geològiques disponibles per a aquesta ubicació",
+  "noStratigraphicData": "No hi ha dades estratigràfiques disponibles per a aquesta ubicació",
+  "none": "Cap",
+  "obsidian": "Obsidiana",
+  "opacity": "Opacitat",
+  "ordovician": "Ordovicià",
+  "paleogene": "Paleogen",
+  "paleozoic": "Paleozoic",
+  "peridotite": "Peridotita",
+  "permian": "Permià",
+  "phyllite": "Fil·lita",
+  "plutonic": "Plutònica",
+  "precambrian": "Precambrià",
+  "pumice": "Pedra tosca",
+  "quartzite": "Quarsita",
+  "quaternary": "Quaternari",
+  "retry": "Tornar a intentar",
+  "rhyolite": "Riolita",
+  "rockType": "Tipus de roca",
+  "salt": "Sal",
+  "sandstone": "Gres",
+  "schist": "Esquist",
+  "sedimentary": "Sedimentària",
+  "sedimentaryRocks": "Roques sedimentàries",
+  "serpentinite": "Serpentinita",
+  "shale": "Esquist argilós",
+  "showGeologyLayer": "Mostrar capa de geologia",
+  "silurian": "Silurià",
+  "siltstone": "Llimolita",
+  "slate": "Pissarra",
+  "stratigraphicColumn": "Columna estratigràfica",
+  "stratigraphy": "Estratigrafia",
+  "switchToEqualHeights": "Canviar a altures iguals",
+  "switchToProportionalHeights": "Canviar a altures proporcionals",
+  "syenite": "Sienita",
+  "triassic": "Triàsic",
+  "tuff": "Tuf",
+  "unknownUnit": "Unitat desconeguda",
+  "units": "unitats",
+  "viewStratigraphy": "Veure estratigrafia",
+  "visitMacrostratWebsite": "Visitar el lloc web de MacroStrat",
+  "volcanic": "Volcànica"
 }
