--- a/assets/assets/lang/de.json
+++ b/assets/assets/lang/de.json
@@ -13,8 +13,6 @@
   "myRecords": "Meine Aufzeichnungen",
   "settings": "Einstellungen",
   "logout": "Abmelden",
-
-
   "language": "Sprache",
   "theme": "Thema",
   "systemTheme": "Systemthema",
@@ -22,7 +20,6 @@
   "darkTheme": "Dunkles Thema",
   "submit": "Absenden",
   "cancel": "Abbrechen",
-
   "selectColumns": "Spalten auswählen",
   "ok": "OK",
   "noData": "Keine Daten",
@@ -105,7 +102,6 @@
   "source": "Quelle",
   "progress": "Fortschritt",
   "title": "Titel",
-
   "description": "Beschreibung",
   "creator": "Ersteller",
   "inCollection": "In Sammlung",
@@ -216,8 +212,6 @@
   "enterCity": "Stadt eingeben",
   "enterState": "Bundesland eingeben",
   "enterCountry": "Land eingeben",
-
-
   "enterPrice": "Preis eingeben oder Kostenlos auswählen",
   "enterOrganizer": "Veranstalter eingeben",
   "targetAudience": "Zielgruppe",
@@ -261,7 +255,6 @@
   "museumDetails": "Museumsdetails",
   "database": "Datenbank",
   "deleteLocalDatabases": "Lokale Datenbank löschen",
-  "localDatabaseCleared": "Lokale Datenbank gelöscht",
   "translators": "Übersetzer",
   "supportUs": "Unterstützen Sie uns",
   "pinchToZoom": "Zum Zoomen zusammendrücken",
@@ -307,42 +300,15 @@
   "viewFullDetails": "Vollständige Details anzeigen",
   "viewOnApp": "In Where is my fossil anzeigen",
   "opportunities": "Paläontologische Möglichkeiten",
-
-
-
-
   "opportunityApply": "Bewerben",
   "opportunityContact": "Kontakt",
   "opportunityNoResults": "Keine Möglichkeiten gefunden",
   "opportunityFilterByType": "Nach Typ filtern",
   "opportunityFilterByCountry": "Nach Land filtern",
-
   "opportunitySubmitNew": "Neue Möglichkeit einreichen",
   "opportunitySeeDetails": "Details anzeigen",
-
-
   "opportunityResetFilters": "Filter zurücksetzen",
   "opportunityApplyFilters": "Filter anwenden",
-
-
-
-
-
-
-
-
-  "selectLocationOnMap": "Standort auf der Karte auswählen",
-
-
-
-
-
-
-
-
-
-
-
   "type": "Typ",
   "deadline": "Bewerbungsfrist",
   "location": "Standort",
@@ -352,7 +318,13 @@
   "contactEmail": "Kontakt-E-Mail",
   "visible": "Sichtbar",
   "selectLocation": "Standort auswählen",
-
+  "opportunityIntroText": "Eine neue paläontologische Möglichkeit einreichen",
+  "opportunityLoginRequired": "Sie müssen angemeldet sein, um eine Möglichkeit einzureichen",
+  "selectLocationOnMap": "Standort auf der Karte auswählen",
+  "searchLocation": "Nach einem Standort suchen...",
+  "noLocationsFound": "Keine Standorte gefunden",
+  "confirm": "Bestätigen",
+  "myLocation": "Mein Standort",
   "confirmUpload": "Upload bestätigen",
   "uploadingOpportunities": "Möglichkeiten werden hochgeladen...",
   "validationIssues": "Validierungsprobleme",
@@ -361,10 +333,8 @@
   "selectType": "Bitte einen Typ auswählen",
   "selectDeadline": "Bitte eine Bewerbungsfrist auswählen",
   "enterInstitution": "Bitte eine Institution eingeben",
-
   "enterRequirements": "Bitte Anforderungen eingeben",
   "enterApplicationUrl": "Bitte eine Bewerbungs-URL eingeben",
-  "enterValidUrl": "Bitte eine gültige URL eingeben",
   "enterContactEmail": "Bitte eine Kontakt-E-Mail eingeben",
   "enterValidEmail": "Bitte eine gültige E-Mail-Adresse eingeben",
   "confirmUploadMessage": "Dies wird {count} Möglichkeiten hochladen. Möchten Sie fortfahren?",
@@ -380,12 +350,137 @@
   "subUnits": "Untereinheiten",
   "searchTimeUnits": "Zeiteinheiten suchen...",
   "noResultsFound": "Keine Ergebnisse gefunden für",
-
   "noDataAvailable": "Keine Daten verfügbar",
-
   "eon": "Äon",
   "era": "Ära",
   "period": "Periode",
   "epoch": "Epoche",
-  "age": "Alter"
+  "age": "Alter",
+  "geologicalPeriod": "Geologische Periode",
+  "comments": "Kommentare",
+  "dataSources": "Datenquellen",
+  "geologicalDataSources": "Geologische Datenquellen:",
+  "sourceId": "Quellen-ID:",
+  "aboutGeologyData": "Über geologische Daten",
+  "activeFilters": "Aktive Filter",
+  "andesite": "Andesit",
+  "arkose": "Arkose",
+  "basalt": "Basalt",
+  "bedrock": "Grundgestein",
+  "breccia": "Brekzie",
+  "cambrian": "Kambrium",
+  "carboniferous": "Karbon",
+  "cenozoic": "Känozoikum",
+  "changeChartColor": "Diagrammfarbe ändern",
+  "chert": "Hornstein",
+  "claystone": "Tonstein",
+  "coal": "Kohle",
+  "conglomerate": "Konglomerat",
+  "continue": "Fortfahren",
+  "cretaceous": "Kreide",
+  "dacite": "Dazit",
+  "dataSubmittedDescription": "Beschreibung der übermittelten Daten",
+  "devonian": "Devon",
+  "diorite": "Diorit",
+  "dolomite": "Dolomit",
+  "dolostone": "Dolomitstein",
+  "enableUserFilter": "Benutzerfilter aktivieren",
+  "enterDescription": "Beschreibung eingeben",
+  "error": "Fehler",
+  "evaporite": "Evaporit",
+  "filterTerms": "Begriffe filtern",
+  "filterUsers": "Benutzer filtern",
+  "gabbro": "Gabbro",
+  "geologicalInfo": "Geologische Informationen",
+  "geology": "Geologie",
+  "geologyDataDescription": "Geologische Daten bereitgestellt von MacroStrat, einer geologischen Datenplattform, die Informationen über Gesteinseinheiten und ihre Eigenschaften zusammenstellt.",
+  "geologyDataSource": "Quelle geologischer Daten: MacroStrat (https://macrostrat.org)",
+  "geologyFeatureDescription": "Diese Funktion ermöglicht es, geologische Daten über die Karte zu legen und Kontext über die Gesteinseinheiten im ausgewählten Bereich zu liefern.",
+  "geologyStep1": "Aktivieren Sie die Geologieebene mit dem Schalter im Ebenenmenü",
+  "geologyStep2": "Passen Sie die Deckkraft der Ebene nach Bedarf an",
+  "geologyStep3": "Tippen Sie auf einen beliebigen Bereich der Karte, um detaillierte geologische Informationen anzuzeigen",
+  "geologyStep4": "Verwenden Sie die Schaltfläche 'Stratigraphie anzeigen', um die stratigraphische Säule des Bereichs zu erkunden",
+  "gneiss": "Gneis",
+  "granite": "Granit",
+  "graywacke": "Grauwacke",
+  "gypsum": "Gips",
+  "hideAll": "Alle ausblenden",
+  "hideFilters": "Filter ausblenden",
+  "hideGeologyLayer": "Geologieebene ausblenden",
+  "hornfels": "Hornfels",
+  "howToUseGeologyLayer": "Wie die Geologieebene zu verwenden ist",
+  "igneous": "Magmatisch",
+  "jurassic": "Jura",
+  "limestone": "Kalkstein",
+  "loadingStratigraphicData": "Stratigraphische Daten werden geladen...",
+  "loadingUnits": "Einheiten werden geladen...",
+  "localDatabasesCleared": "Lokale Datenbanken gelöscht",
+  "marble": "Marmor",
+  "marl": "Mergel",
+  "mesozoic": "Mesozoikum",
+  "metamorphic": "Metamorph",
+  "migmatite": "Migmatit",
+  "millionYearsAgo": "Millionen Jahre alt",
+  "mudstone": "Schlammstein",
+  "multipleColumnsFound": "Mehrere Säulen gefunden",
+  "neogene": "Neogen",
+  "newFeature": "Neue Funktion",
+  "noGeologyData": "Keine geologischen Daten für diesen Standort verfügbar",
+  "noRecordsFound": "Keine Aufzeichnungen gefunden",
+  "noStratigraphicData": "Keine stratigraphischen Daten verfügbar",
+  "none": "Keine",
+  "obsidian": "Obsidian",
+  "opacity": "Deckkraft",
+  "opportunityDeadline": "Bewerbungsfrist",
+  "opportunityFilterTitle": "Filter-Titel",
+  "opportunitySalary": "Gehalt",
+  "ordovician": "Ordovizium",
+  "paleogene": "Paläogen",
+  "paleozoic": "Paläozoikum",
+  "peridotite": "Peridotit",
+  "permian": "Perm",
+  "phyllite": "Phyllit",
+  "plutonic": "Plutonisch",
+  "precambrian": "Präkambrium",
+  "pumice": "Bimsstein",
+  "quartzite": "Quarzit",
+  "quaternary": "Quartär",
+  "reference": "Referenz",
+  "resetAllFilters": "Alle Filter zurücksetzen",
+  "resetTree": "Baum zurücksetzen",
+  "retry": "Wiederholen",
+  "rhyolite": "Rhyolith",
+  "rockType": "Gesteinstyp",
+  "salt": "Salz",
+  "sandstone": "Sandstein",
+  "schist": "Schiefer",
+  "searchTerms": "Suchbegriffe",
+  "searchUsers": "Benutzer suchen",
+  "sedimentary": "Sedimentär",
+  "sedimentaryRocks": "Sedimentgesteine",
+  "selectAll": "Alle auswählen",
+  "selectColor": "Farbe auswählen",
+  "selectNone": "Keine auswählen",
+  "serpentinite": "Serpentinit",
+  "shale": "Schiefer",
+  "showAll": "Alle anzeigen",
+  "showFilters": "Filter anzeigen",
+  "showGeologyLayer": "Geologieebene anzeigen",
+  "siltstone": "Siltstein",
+  "silurian": "Silur",
+  "slate": "Schiefer",
+  "stratigraphicColumn": "Stratigraphische Säule",
+  "stratigraphy": "Stratigraphie",
+  "switchToEqualHeights": "Zu gleichen Höhen wechseln",
+  "switchToProportionalHeights": "Zu proportionalen Höhen wechseln",
+  "syenite": "Syenit",
+  "translations": "Übersetzungen",
+  "triassic": "Trias",
+  "tuff": "Tuff",
+  "units": "Einheiten",
+  "unknownUnit": "Unbekannte Einheit",
+  "viewMediaAndReferences": "Medien und Referenzen anzeigen",
+  "viewStratigraphy": "Stratigraphie anzeigen",
+  "visitMacrostratWebsite": "MacroStrat-Website besuchen",
+  "volcanic": "Vulkanisch"
 }
