--- a/assets/assets/lang/el.json
+++ b/assets/assets/lang/el.json
@@ -327,17 +327,12 @@
 
 
 
-
   "selectLocationOnMap": "Επιλέξτε Τοποθεσία στον Χάρτη",
-
-
-
-
-
-
-
-
-
+  "searchLocation": "Αναζήτηση τοποθεσίας...",
+  "noLocationsFound": "Δεν βρέθηκαν τοποθεσίες",
+  "confirm": "Επιβεβαίωση",
+  "myLocation": "Η τοποθεσία μου",
+  
   "opportunityLoginRequired": "Πρέπει να είστε συνδεδεμένοι για να υποβάλετε μια ευκαιρία",
 
   "type": "Τύπος",
@@ -371,12 +366,150 @@
   "noResultsFound": "Δεν βρέθηκαν αποτελέσματα",
 
   "noDataAvailable": "Δεν είναι διαθέσιμα δεδομένα",
-
   "eon": "Eon",
   "era": "Era",
   "period": "Περίοδος",
   "epoch": "Εποχή",
-  "age": "Ηλικία"
+  "age": "Ηλικία",  "geologicalPeriod": "Γεωλογική Περίοδος",
+  "comments": "Σχόλια",
+  "dataSources": "Πηγές Δεδομένων",
+  "geologicalDataSources": "Πηγές γεωλογικών δεδομένων:",
+  "sourceId": "ID Πηγής:",
+
+  "aboutGeologyData": "Σχετικά με τα γεωλογικά δεδομένα",
+  "activeFilters": "Ενεργά φίλτρα",
+  "andesite": "Ανδεσίτης",
+  "arkose": "Αρκόζη",
+  "basalt": "Βασάλτης",
+  "bedrock": "Υπόβαθρο",
+  "breccia": "Βρέχα",
+  "cambrian": "Κάμβριος",
+  "carboniferous": "Καρβονιφέρος",
+  "cenozoic": "Καινοζωικός",
+  "changeChartColor": "Αλλαγή χρώματος γραφήματος",
+  "chert": "Πυρόλιθος",
+  "claystone": "Αργιλόλιθος",
+  "coal": "Άνθρακας",
+  "conglomerate": "Κροκαλοπαγές",
+  "continue": "Συνέχεια",
+  "cretaceous": "Κρητιδικός",
+  "dacite": "Δακίτης",
+  "dataManager": "Διαχειριστής δεδομένων",
+  "dataSubmittedDescription": "Περιγραφή υποβληθέντων δεδομένων",
+  "description": "Περιγραφή",
+  "devonian": "Δεβόνιος",
+  "diorite": "Διορίτης",
+  "dolomite": "Δολομίτης",
+  "dolostone": "Δολομιτικός βράχος",
+  "enableUserFilter": "Ενεργοποίηση φίλτρου χρήστη",
+  "enterApplicationUrl": "Εισάγετε URL αίτησης",
+  "enterContactEmail": "Εισάγετε email επικοινωνίας",
+  "enterDescription": "Εισάγετε περιγραφή",
+  "enterInstitution": "Εισάγετε ίδρυμα",
+  "enterRequirements": "Εισάγετε απαιτήσεις",
+  "enterValidEmail": "Εισάγετε έγκυρη διεύθυνση email",
+  "error": "Σφάλμα",
+  "errorProfileLinkLabel": "Σφάλμα συνδέσμου προφίλ",
+  "evaporite": "Εξατμιτικός βράχος",
+  "filterTerms": "Φιλτράρισμα όρων",
+  "filterUsers": "Φιλτράρισμα χρηστών",
+  "gabbro": "Γάββρος",
+  "geologicalInfo": "Γεωλογικές πληροφορίες",
+  "geology": "Γεωλογία",
+  "geologyDataDescription": "Γεωλογικά δεδομένα που παρέχονται από το MacroStrat, μια πλατφόρμα γεωλογικών δεδομένων που συγκεντρώνει πληροφορίες για τις βραχώδεις μονάδες και τις ιδιότητές τους.",
+  "geologyDataSource": "Πηγή γεωλογικών δεδομένων: MacroStrat (https://macrostrat.org)",
+  "geologyFeatureDescription": "Αυτή η λειτουργία επιτρέπει την επικάλυψη γεωλογικών δεδομένων στον χάρτη, παρέχοντας πλαίσιο για τις βραχώδεις μονάδες στην επιλεγμένη περιοχή.",
+  "geologyStep1": "Ενεργοποιήστε το γεωλογικό επίπεδο χρησιμοποιώντας τον διακόπτη στο μενού επιπέδων",
+  "geologyStep2": "Προσαρμόστε την αδιαφάνεια του επιπέδου όπως χρειάζεται",
+  "geologyStep3": "Πατήστε οπουδήποτε στον χάρτη για να δείτε λεπτομερείς γεωλογικές πληροφορίες",
+  "geologyStep4": "Χρησιμοποιήστε το κουμπί 'Προβολή στρωματογραφίας' για να εξερευνήσετε τη στρωματογραφική στήλη της περιοχής",
+  "gneiss": "Γνεύσιος",
+  "granite": "Γρανίτης",
+  "graywacke": "Γραουβάκη",
+  "gypsum": "Γύψος",
+  "hideAll": "Απόκρυψη όλων",
+  "hideFilters": "Απόκρυψη φίλτρων",
+  "hideGeologyLayer": "Απόκρυψη γεωλογικού επιπέδου",
+  "hornfels": "Κερατόλιθος",
+  "howToUseGeologyLayer": "Πώς να χρησιμοποιήσετε το γεωλογικό επίπεδο",
+  "igneous": "Πυριγενής",
+  "inCollection": "Στη συλλογή",
+  "jurassic": "Ιουρασικός",
+  "limestone": "Ασβεστόλιθος",
+  "loadingStratigraphicData": "Φόρτωση στρωματογραφικών δεδομένων...",
+  "loadingUnits": "Φόρτωση μονάδων...",
+  "localDatabasesCleared": "Οι τοπικές βάσεις δεδομένων διαγράφηκαν",
+  "marble": "Μάρμαρο",
+  "marl": "Μάργα",
+  "mesozoic": "Μεσοζωικός",
+  "metamorphic": "Μεταμορφικός",
+  "migmatite": "Μιγματίτης",
+  "millionYearsAgo": "εκατομμύρια χρόνια πριν",
+  "mudstone": "Πηλόλιθος",
+  "multipleColumnsFound": "Βρέθηκαν πολλαπλές στήλες",
+  "neogene": "Νεογενής",
+  "newFeature": "Νέα λειτουργία",
+  "noGeologyData": "Δεν υπάρχουν διαθέσιμα γεωλογικά δεδομένα για αυτήν την τοποθεσία",
+  "noRecordsFound": "Δεν βρέθηκαν εγγραφές",
+  "noStratigraphicData": "Δεν υπάρχουν διαθέσιμα στρωματογραφικά δεδομένα",
+  "none": "Κανένα",
+  "obsidian": "Οψιδιανός",
+  "opacity": "Αδιαφάνεια",
+  "opportunityDeadline": "Προθεσμία ευκαιρίας",
+  "opportunityFilterTitle": "Τίτλος φίλτρου",
+  "opportunityIntroText": "Υποβολή νέας παλαιοντολογικής ευκαιρίας",
+  "opportunitySalary": "Μισθός",
+  "ordovician": "Οδρβίκιος",
+  "paleogene": "Παλαιογενής",
+  "paleozoic": "Παλαιοζωικός",
+  "peridotite": "Περιδοτίτης",
+  "permian": "Πέρμιος",
+  "phyllite": "Φυλλίτης",
+  "plutonic": "Πλουτώνιος",
+  "precambrian": "Προκάμβριος",
+  "pumice": "Κισσήρις",
+  "quartzite": "Κουαρτσίτης",
+  "quaternary": "Τεταρτογενής",
+  "reference": "Αναφορά",
+  "resetAllFilters": "Επαναφορά όλων των φίλτρων",
+  "resetTree": "Επαναφορά δέντρου",
+  "retry": "Επανάληψη",
+  "rhyolite": "Ρυολίτης",
+  "rockType": "Τύπος βράχου",
+  "salt": "Άλας",
+  "sandstone": "Ψαμμίτης",
+  "schist": "Σχιστόλιθος",
+  "searchTerms": "Όροι αναζήτησης",
+  "searchUsers": "Αναζήτηση χρηστών",
+  "sedimentary": "Ιζηματογενής",
+  "sedimentaryRocks": "Ιζηματογενείς βράχοι",
+  "selectAll": "Επιλογή όλων",
+  "selectColor": "Επιλογή χρώματος",
+  "selectColumns": "Επιλογή στηλών",
+  "selectDeadline": "Επιλέξτε προθεσμία",
+  "selectNone": "Επιλογή κανενός",
+  "serpentinite": "Σερπεντινίτης",
+  "shale": "Αργιλικός σχιστόλιθος",
+  "showAll": "Εμφάνιση όλων",
+  "showFilters": "Εμφάνιση φίλτρων",
+  "showGeologyLayer": "Εμφάνιση γεωλογικού επιπέδου",
+  "siltstone": "Αλευρόλιθος",
+  "silurian": "Σιλούριος",
+  "slate": "Σχιστόλιθος",
+  "stratigraphicColumn": "Στρωματογραφική στήλη",
+  "stratigraphy": "Στρωματογραφία",
+  "switchToEqualHeights": "Μετάβαση σε ίσα ύψη",
+  "switchToProportionalHeights": "Μετάβαση σε αναλογικά ύψη",
+  "syenite": "Συενίτης",
+  "translations": "Μεταφράσεις",
+  "triassic": "Τριασικός",
+  "tuff": "Τόφφος",
+  "units": "Μονάδες",
+  "unknownUnit": "Άγνωστη μονάδα",
+  "viewMediaAndReferences": "Προβολή πολυμέσων και αναφορών",
+  "viewStratigraphy": "Προβολή στρωματογραφίας",
+  "visitMacrostratWebsite": "Επισκεφτείτε τον ιστότοπο MacroStrat",
+  "volcanic": "Ηφαιστειακός"
 }
 
 
