--- a/assets/assets/lang/en.json
+++ b/assets/assets/lang/en.json
@@ -310,7 +310,6 @@
   "taxon": "Taxon",
   "pbdbOccurrenceId": "PBDB Occurrence ID",
   "viewFullDetails": "View Full Details",
-  "member": "Member",
   "reference": "Reference",
   "viewMediaAndReferences": "View Media and References",
   "location": "Location",
@@ -356,8 +355,12 @@
   "opportunityFilterOptions": "Filter Options",
   "selectLocation": "Select Location",
   "opportunityIntroText": "Submit a new paleontology opportunity",
-  "opportunityLoginRequired": "You need to login to submit an opportunity",
+  "opportunityLoginRequired": "You need to login to submit an opportunity",  
   "selectLocationOnMap": "Select location on map",
+  "searchLocation": "Search for a location...",
+  "noLocationsFound": "No locations found",
+  "confirm": "Confirm",
+  "myLocation": "My Location",
   "selectColor": "Select Color",
   "changeChartColor": "Change Chart Color",
   "filterTerms": "Filter Terms",
@@ -382,14 +385,117 @@
   "subUnits": "sub-units",
   "searchTimeUnits": "Search for time units...",
   "noResultsFound": "No results found for",
-
   "noDataAvailable": "No data available",
 
   "eon": "Eon",
   "era": "Era",
   "period": "Period",
   "epoch": "Epoch",
-  "age": "Age"
+  "age": "Age",
+    "geology": "Geology",
+  "bedrock": "Geological Map",
+  "showGeologyLayer": "Show Geology Layer",
+  "hideGeologyLayer": "Hide Geology Layer",
+  "opacity": "Opacity",
+  "geologicalInfo": "Geological Info",
+  "noGeologyData": "No geological data available for this location",
+  "none": "None",
+  "geologyFeatureDescription": "Now you can view geological map layers to understand the ancient history beneath the fossils. This feature uses the MacroStrat API to display geological data including rock types, formations, and ages.",
+  "howToUseGeologyLayer": "How to use this feature",
+  "geologyStep1": "Tap the layers icon in the bottom left of the map to toggle the geology layer on/off.",
+  "geologyStep2": "Select 'Geological Map' to view rock types, formations, and geological ages.",
+  "geologyStep3": "Adjust the opacity slider to blend the geological layer with the base map.",
+  "geologyStep4": "Tap the 'Geological Info' button to get details about the geology at the center of the map.",
+  "aboutGeologyData": "About this data",
+  "geologyDataDescription": "The geological data is provided by MacroStrat, a platform for geological data integration and visualization.",  
+  "geologyDataSource": "Data includes rock types, geological ages, and stratigraphic information from global geological surveys.",
+  "visitMacrostratWebsite": "Visit MacroStrat Website",
+  "newFeature": "New Feature!",  
+  "rockType": "Rock Type",
+  "stratigraphy": "Stratigraphy",
+  "millionYearsAgo": "Million years ago",
+  "stratigraphicColumn": "Stratigraphic Column",
+  "viewStratigraphy": "View Stratigraphy",
+  "loadingStratigraphicData": "Loading stratigraphic data...",
+  "noStratigraphicData": "No stratigraphic data available for this location",
+  "retry": "Retry",
+  "multipleColumnsFound": "Multiple columns found",
+  "units": "units",
+  "loadingUnits": "Loading units...",
+  "unknownUnit": "Unknown Unit",
+    
+  "sedimentaryRocks": "Sedimentary rocks",
+  "sedimentary": "Sedimentary",
+  "igneous": "Igneous",
+  "metamorphic": "Metamorphic",
+  "volcanic": "Volcanic",
+  "plutonic": "Plutonic",
+  
+  "sandstone": "Sandstone",
+  "limestone": "Limestone",
+  "dolostone": "Dolostone",
+  "dolomite": "Dolomite",
+  "shale": "Shale",
+  "mudstone": "Mudstone",
+  "siltstone": "Siltstone",
+  "conglomerate": "Conglomerate",
+  "breccia": "Breccia",
+  "chert": "Chert",
+  "coal": "Coal",
+  "evaporite": "Evaporite",
+  "gypsum": "Gypsum",
+  "salt": "Salt",
+  "marl": "Marl",
+  "claystone": "Claystone",
+  "arkose": "Arkose",
+  "graywacke": "Graywacke",
+  
+  "granite": "Granite",
+  "basalt": "Basalt",
+  "andesite": "Andesite",
+  "rhyolite": "Rhyolite",
+  "dacite": "Dacite",
+  "obsidian": "Obsidian",
+  "pumice": "Pumice",
+  "tuff": "Tuff",
+  "gabbro": "Gabbro",
+  "diorite": "Diorite",
+  "syenite": "Syenite",
+  "peridotite": "Peridotite",
+  
+  "quartzite": "Quartzite",
+  "marble": "Marble",
+  "slate": "Slate",
+  "phyllite": "Phyllite",
+  "schist": "Schist",
+  "gneiss": "Gneiss",
+  "migmatite": "Migmatite",
+  "hornfels": "Hornfels",
+  "serpentinite": "Serpentinite",
+  
+  "paleozoic": "Paleozoic",
+  "mesozoic": "Mesozoic",
+  "cenozoic": "Cenozoic",
+  "precambrian": "Precambrian",
+  "cambrian": "Cambrian",
+  "ordovician": "Ordovician",
+  "silurian": "Silurian",
+  "devonian": "Devonian",
+  "carboniferous": "Carboniferous",
+  "permian": "Permian",
+  "triassic": "Triassic",
+  "jurassic": "Jurassic",  "cretaceous": "Cretaceous",
+  "paleogene": "Paleogene",
+  "neogene": "Neogene",  "quaternary": "Quaternary",
+  
+  "switchToEqualHeights": "Switch to Equal Heights",
+  "switchToProportionalHeights": "Switch to Proportional Heights",
+  
+  "geologicalPeriod": "Geological Period",
+  "comments": "Comments",
+  "dataSources": "Data Sources",
+  "geologicalDataSources": "Geological data sources:",
+  "sourceId": "Source ID:"
 }
 
 
