--- a/assets/assets/lang/es.json
+++ b/assets/assets/lang/es.json
@@ -13,8 +13,6 @@
   "myRecords": "Mis Registros",
   "settings": "Configuración",
   "logout": "Cerrar Sesión",
-
-
   "language": "Idioma",
   "theme": "Tema",
   "systemTheme": "Tema del Sistema",
@@ -22,7 +20,6 @@
   "darkTheme": "Tema Oscuro",
   "submit": "Enviar",
   "cancel": "Cancelar",
-
   "selectColumns": "Seleccionar Columnas",
   "ok": "OK",
   "noData": "Sin Datos",
@@ -112,7 +109,6 @@
   "source": "Fuente",
   "progress": "Progreso",
   "title": "Título",
-
   "description": "Descripción",
   "creator": "Creador",
   "inCollection": "En Colección",
@@ -217,8 +213,6 @@
   "enterCity": "Ingrese ciudad",
   "enterState": "Ingrese estado",
   "enterCountry": "Ingrese país",
-
-
   "enterPrice": "Ingrese precio o seleccione Gratis",
   "enterOrganizer": "Ingrese organizador",
   "targetAudience": "Público Objetivo",
@@ -310,7 +304,6 @@
   "taxon": "Taxón",
   "pbdbOccurrenceId": "ID de Ocurrencia PBDB",
   "viewFullDetails": "Ver Detalles Completos",
-  "member": "Miembro",
   "reference": "Referencia",
   "viewMediaAndReferences": "Ver Multimedia y Referencias",
   "location": "Ubicación",
@@ -357,6 +350,10 @@
   "opportunityIntroText": "Enviar una nueva oportunidad paleontológica",
   "opportunityLoginRequired": "Necesitas iniciar sesión para enviar una oportunidad",
   "selectLocationOnMap": "Seleccionar ubicación en el mapa",
+  "searchLocation": "Buscar ubicación...",
+  "noLocationsFound": "No se encontraron ubicaciones",
+  "confirm": "Confirmar",
+  "myLocation": "Mi ubicación",
   "selectColor": "Seleccionar Color",
   "changeChartColor": "Cambiar Color del Gráfico",
   "filterTerms": "Filtrar Términos",
@@ -376,20 +373,114 @@
   "ma": "Ma",
   "stratigraphicUnit": "Unidad Estratigráfica",
   "geochronologicUnit": "Unidad Geocronológica",
-
   "ratifiedGSSPCategories": "Sección Estratotipo de Límite Global y Punto",
   "ratifiedGSSACategories": "Edad Estratigráfica Estándar Global",
   "subUnits": "sub-unidades",
   "searchTimeUnits": "Buscar unidades de tiempo...",
   "noResultsFound": "No se encontraron resultados para",
-
   "noDataAvailable": "No hay datos disponibles",
-
   "eon": "Eón",
   "era": "Era",
   "period": "Período",
   "epoch": "Época",
-  "age": "Edad"
+  "age": "Edad",
+  "geology": "Geología",
+  "bedrock": "Mapa Geológico",
+  "showGeologyLayer": "Mostrar Capa Geológica",
+  "hideGeologyLayer": "Ocultar Capa Geológica",
+  "opacity": "Opacidad",
+  "geologicalInfo": "Info Geológica",
+  "noGeologyData": "No hay datos geológicos disponibles para esta ubicación",
+  "none": "Ninguno",
+  "geologyFeatureDescription": "Ahora puedes ver capas de mapas geológicos para comprender la historia antigua debajo de los fósiles. Esta característica usa la API de MacroStrat para mostrar datos geológicos incluyendo tipos de rocas, formaciones y edades.",
+  "howToUseGeologyLayer": "Cómo usar esta característica",
+  "geologyStep1": "Toca el icono de capas en la parte inferior izquierda del mapa para activar/desactivar la capa geológica.",
+  "geologyStep2": "Selecciona 'Mapa Geológico' para ver tipos de rocas, formaciones y edades geológicas.",
+  "geologyStep3": "Ajusta el control deslizante de opacidad para mezclar la capa geológica con el mapa base.",
+  "geologyStep4": "Toca el botón 'Info Geológica' para obtener detalles sobre la geología en el centro del mapa.",
+  "aboutGeologyData": "Acerca de estos datos",
+  "geologyDataDescription": "Los datos geológicos son proporcionados por MacroStrat, una plataforma para la integración y visualización de datos geológicos.",
+  "geologyDataSource": "Los datos incluyen tipos de rocas, edades geológicas e información estratigráfica de estudios geológicos globales.",
+  "visitMacrostratWebsite": "Visitar el Sitio Web de MacroStrat",
+  "newFeature": "¡Nueva Característica!",
+  "rockType": "Tipo de Roca",
+  "stratigraphy": "Estratigrafía",
+  "millionYearsAgo": "Millones de años atrás",
+  "stratigraphicColumn": "Columna Estratigráfica",
+  "viewStratigraphy": "Ver Estratigrafía",
+  "loadingStratigraphicData": "Cargando datos estratigráficos...",
+  "noStratigraphicData": "No hay datos estratigráficos disponibles para esta ubicación",
+  "loadingUnits": "Cargando unidades...",
+  "unknownUnit": "Unidad Desconocida",
+  "units": "unidades",
+  "multipleColumnsFound": "Se encontraron {count} columnas estratigráficas",
+  "retry": "Reintentar",
+  "sedimentaryRocks": "Rocas sedimentarias",
+  "sedimentary": "Sedimentaria",
+  "igneous": "Ígnea",
+  "metamorphic": "Metamórfica",
+  "volcanic": "Volcánica",
+  "plutonic": "Plutónica",
+  "sandstone": "Arenisca",
+  "limestone": "Caliza",
+  "dolostone": "Dolomita",
+  "dolomite": "Dolomita",
+  "shale": "Lutita",
+  "mudstone": "Fangolita",
+  "siltstone": "Limolita",
+  "conglomerate": "Conglomerado",
+  "breccia": "Brecha",
+  "chert": "Sílex",
+  "coal": "Carbón",
+  "evaporite": "Evaporita",
+  "gypsum": "Yeso",
+  "salt": "Sal",
+  "marl": "Marga",
+  "claystone": "Arcillita",
+  "arkose": "Arcosa",
+  "graywacke": "Grauvaca",
+  "granite": "Granito",
+  "basalt": "Basalto",
+  "andesite": "Andesita",
+  "rhyolite": "Riolita",
+  "dacite": "Dacita",
+  "obsidian": "Obsidiana",
+  "pumice": "Pómez",
+  "tuff": "Toba",
+  "gabbro": "Gabro",
+  "diorite": "Diorita",
+  "syenite": "Sienita",
+  "peridotite": "Peridotita",
+  "quartzite": "Cuarcita",
+  "marble": "Mármol",
+  "slate": "Pizarra",
+  "phyllite": "Filita",
+  "schist": "Esquisto",
+  "gneiss": "Gneis",
+  "migmatite": "Migmatita",
+  "hornfels": "Hornfels",
+  "serpentinite": "Serpentinita",
+  "paleozoic": "Paleozoico",
+  "mesozoic": "Mesozoico",
+  "cenozoic": "Cenozoico",
+  "precambrian": "Precámbrico",
+  "cambrian": "Cámbrico",
+  "ordovician": "Ordovícico",
+  "silurian": "Silúrico",
+  "devonian": "Devónico",
+  "carboniferous": "Carbonífero",
+  "permian": "Pérmico",
+  "triassic": "Triásico",
+  "jurassic": "Jurásico",
+  "cretaceous": "Cretácico",
+  "paleogene": "Paleógeno",
+  "neogene": "Neógeno",
+  "quaternary": "Cuaternario",
+  "switchToEqualHeights": "Cambiar a Alturas Iguales",
+  "switchToProportionalHeights": "Cambiar a Alturas Proporcionales",
+  "geologicalPeriod": "Período Geológico",
+  "comments": "Comentarios",
+  "dataSources": "Fuentes de Datos",
+  "geologicalDataSources": "Fuentes de datos geológicos:",
+  "sourceId": "ID de Fuente:"
 }
-
-
