--- a/assets/assets/lang/it.json
+++ b/assets/assets/lang/it.json
@@ -13,8 +13,6 @@
   "myRecords": "Le mie osservazioni",
   "settings": "Impostazioni",
   "logout": "Logout",
-
-
   "language": "Lingua",
   "theme": "Tema",
   "systemTheme": "Tema di Sistema",
@@ -22,7 +20,6 @@
   "darkTheme": "Tema Scuro",
   "submit": "Invia",
   "cancel": "Annulla",
-
   "ok": "OK",
   "noData": "Nessun Dato",
   "dataTable": "Tabella Dati",
@@ -55,9 +52,7 @@
   "acceptToAppearText": "Accetto di apparire nell'app come esperto in modo che gli altri utenti possano trovarmi",
   "submitButton": "Invia e accedi con Google",
   "dataSubmittedMessage": "Dati inviati con successo",
-
   "noteLoginResearcher": "Nota: La prossima volta potrai accedere come normale utente",
-
   "name": "Nome",
   "degree": "Laurea",
   "experience": "Anni di Esperienza",
@@ -104,7 +99,6 @@
   "source": "Fonte",
   "progress": "Progresso",
   "title": "Titolo",
-
   "description": "Descrizione",
   "creator": "Creatore",
   "inCollection": "Nella Collezione",
@@ -209,7 +203,6 @@
   "enterCity": "Inserisci città",
   "enterState": "Inserisci stato",
   "enterCountry": "Inserisci paese",
-
   "enterPrice": "Inserisci prezzo o seleziona Gratis",
   "enterOrganizer": "Inserisci organizzatore",
   "targetAudience": "Pubblico Target",
@@ -250,8 +243,6 @@
   "acceptTermsText": "Cliccando sul pulsante 'Invia e accedi con Google', accetti i termini e le condizioni dell'applicazione",
   "termsAndConditionsTitle": "Termini e Condizioni",
   "termsAndConditionsContent": "Utilizzando questa applicazione, accetti i seguenti termini e condizioni:\n\n1. I dati forniti dall'applicazione sono solo a scopo informativo. Gli sviluppatori dell'applicazione non sono responsabili per l'accuratezza dei dati.\n\n2. Gli sviluppatori dell'applicazione non sono responsabili per il contenuto delle immagini e dei modelli 3D forniti dall'applicazione.\n\n3. Gli sviluppatori dell'applicazione non sono responsabili per il contenuto dei link esterni forniti dall'applicazione.\n\n4. Gli sviluppatori dell'applicazione si riservano il diritto di includere annunci nell'applicazione per coprire i costi di manutenzione e sviluppo del progetto.\n\n5. Gli sviluppatori dell'applicazione si riservano il diritto di modificare i termini e le condizioni dell'applicazione in qualsiasi momento senza preavviso.\n\n6. Gli sviluppatori dell'applicazione si riservano il diritto di bloccare gli utenti che non rispettano i termini e le condizioni dell'applicazione.\n\n7. Le informazioni fornite dagli utenti dell'applicazione saranno utilizzate esclusivamente per il funzionamento e possono essere utilizzate per scopi statistici e di ricerca e possono essere disponibili per altri utenti dell'applicazione, per questo motivo gli utenti devono essere cauti con le informazioni che forniscono.\n\n8. I tuoi dati saranno archiviati in un servizio di terze parti (Google Firebase) e saranno utilizzati per autenticarti nell'applicazione. Gli sviluppatori dell'applicazione non sono responsabili per la sicurezza dei dati archiviati nel servizio di terze parti.",
-
-
   "isMultyDayEvent": "Evento di più giorni",
   "eventEndDateTime": "Data e ora di fine evento",
   "selectEventDateTime": "Seleziona data e ora evento",
@@ -311,7 +302,6 @@
   "taxon": "Taxon",
   "pbdbOccurrenceId": "ID Occorrenza PBDB",
   "viewFullDetails": "Visualizza Dettagli Completi",
-  "member": "Membro",
   "reference": "Riferimento",
   "viewMediaAndReferences": "Visualizza Media e Riferimenti",
   "viewOnApp": "Visualizza in Where is my fossil",
@@ -345,7 +335,6 @@
   "selectType": "Seleziona un tipo",
   "selectDeadline": "Seleziona una scadenza",
   "enterInstitution": "Inserisci un'istituzione",
-
   "enterRequirements": "Inserisci i requisiti",
   "enterApplicationUrl": "Inserisci un URL per la candidatura",
   "enterContactEmail": "Inserisci un'email di contatto",
@@ -358,6 +347,10 @@
   "opportunityIntroText": "Invia una nuova opportunità in paleontologia",
   "opportunityLoginRequired": "Devi essere loggato per inviare un'opportunità",
   "selectLocationOnMap": "Seleziona posizione sulla mappa",
+  "searchLocation": "Cerca una posizione...",
+  "noLocationsFound": "Nessuna posizione trovata",
+  "confirm": "Conferma",
+  "myLocation": "La mia posizione",
   "selectColor": "Seleziona Colore",
   "changeChartColor": "Cambia Colore Grafico",
   "filterTerms": "Filtra Termini",
@@ -377,20 +370,117 @@
   "ma": "Ma",
   "stratigraphicUnit": "Unità Stratigrafica",
   "geochronologicUnit": "Unità Geocronologica",
-
   "ratifiedGSSPCategories": "Sezione e Punto Stratotipo di Limite Globale",
   "ratifiedGSSACategories": "Età Stratigrafica Standard Globale",
   "subUnits": "Sottounità",
   "searchTimeUnits": "Cerca unità di tempo...",
   "noResultsFound": "Nessun risultato trovato per",
-
   "noDataAvailable": "Nessun dato disponibile",
-
   "eon": "Eone",
   "era": "Era",
   "period": "Periodo",
   "epoch": "Epoca",
-  "age": "Età"
+  "age": "Età",
+  "geologicalPeriod": "Periodo Geologico",
+  "comments": "Commenti",
+  "dataSources": "Fonti di Dati",
+  "geologicalDataSources": "Fonti di dati geologici:",
+  "sourceId": "ID Fonte:",
+  "aboutGeologyData": "Sui dati geologici",
+  "andesite": "Andesite",
+  "arkose": "Arenaria arcosica",
+  "basalt": "Basalto",
+  "bedrock": "Mappa geologica",
+  "breccia": "Breccia",
+  "cambrian": "Cambriano",
+  "carboniferous": "Carbonifero",
+  "cenozoic": "Cenozoico",
+  "chert": "Selce",
+  "claystone": "Argillite",
+  "coal": "Carbone",
+  "conglomerate": "Conglomerato",
+  "cretaceous": "Cretacico",
+  "dacite": "Dacite",
+  "devonian": "Devoniano",
+  "diorite": "Diorite",
+  "dolomite": "Dolomite",
+  "dolostone": "Dolomia",
+  "enterDescription": "Inserisci una descrizione",
+  "errorProfileLinkLabel": "Inserisci un URL valido",
+  "evaporite": "Evaporite",
+  "gabbro": "Gabbro",
+  "geologicalInfo": "Informazioni geologiche",
+  "geology": "Geologia",
+  "geologyDataDescription": "I dati geologici sono forniti da MacroStrat, una piattaforma per l'integrazione e la visualizzazione di dati geologici.",
+  "geologyDataSource": "I dati includono tipi di rocce, età geologiche e informazioni stratigrafiche da rilevamenti geologici globali.",
+  "geologyFeatureDescription": "Ora puoi visualizzare i livelli della mappa geologica per comprendere la storia antica sotto i fossili. Questa funzione utilizza l'API MacroStrat per visualizzare dati geologici inclusi tipi di rocce, formazioni ed età.",
+  "geologyStep1": "Tocca l'icona dei livelli in basso a sinistra della mappa per attivare/disattivare il livello geologico.",
+  "geologyStep2": "Seleziona 'Mappa geologica' per visualizzare tipi di rocce, formazioni ed età geologiche.",
+  "geologyStep3": "Regola il cursore dell'opacità per fondere il livello geologico con la mappa base.",
+  "geologyStep4": "Tocca il pulsante 'Informazioni geologiche' per ottenere dettagli sulla geologia al centro della mappa.",
+  "gneiss": "Gneiss",
+  "granite": "Granito",
+  "graywacke": "Grovacca",
+  "gypsum": "Gesso",
+  "hideGeologyLayer": "Nascondi livello geologico",
+  "hornfels": "Cornubianite",
+  "howToUseGeologyLayer": "Come utilizzare questa funzione",
+  "igneous": "Ignea",
+  "jurassic": "Giurassico",
+  "limestone": "Calcare",
+  "loadingStratigraphicData": "Caricamento dati stratigrafici...",
+  "loadingUnits": "Caricamento unità...",
+  "marble": "Marmo",
+  "marl": "Marna",
+  "mesozoic": "Mesozoico",
+  "metamorphic": "Metamorfica",
+  "migmatite": "Migmatite",
+  "millionYearsAgo": "Milioni di anni fa",
+  "mudstone": "Pelite",
+  "multipleColumnsFound": "Trovate colonne multiple",
+  "neogene": "Neogene",
+  "newFeature": "Nuova funzione!",
+  "noGeologyData": "Nessun dato geologico disponibile per questa posizione",
+  "noStratigraphicData": "Nessun dato stratigrafico disponibile per questa posizione",
+  "none": "Nessuno",
+  "obsidian": "Ossidiana",
+  "opacity": "Opacità",
+  "ordovician": "Ordoviciano",
+  "paleogene": "Paleogene",
+  "paleozoic": "Paleozoico",
+  "peridotite": "Peridotite",
+  "permian": "Permiano",
+  "phyllite": "Fillite",
+  "plutonic": "Plutonica",
+  "precambrian": "Precambriano",
+  "pumice": "Pomice",
+  "quartzite": "Quartzite",
+  "quaternary": "Quaternario",
+  "retry": "Riprova",
+  "rhyolite": "Riolite",
+  "rockType": "Tipo di roccia",
+  "salt": "Sale",
+  "sandstone": "Arenaria",
+  "schist": "Scisto",
+  "sedimentary": "Sedimentaria",
+  "sedimentaryRocks": "Rocce sedimentarie",
+  "selectColumns": "Seleziona colonne",
+  "serpentinite": "Serpentinite",
+  "shale": "Scisto argilloso",
+  "showGeologyLayer": "Mostra livello geologico",
+  "siltstone": "Siltite",
+  "silurian": "Siluriano",
+  "slate": "Ardesia",
+  "stratigraphicColumn": "Colonna stratigrafica",
+  "stratigraphy": "Stratigrafia",
+  "switchToEqualHeights": "Passa ad altezze uguali",
+  "switchToProportionalHeights": "Passa ad altezze proporzionali",
+  "syenite": "Sienite",
+  "triassic": "Triassico",
+  "tuff": "Tufo",
+  "units": "unità",
+  "unknownUnit": "Unità sconosciuta",
+  "viewStratigraphy": "Visualizza stratigrafia",
+  "visitMacrostratWebsite": "Visita il sito web MacroStrat",
+  "volcanic": "Vulcanica"
 }
-
-
