--- a/assets/assets/lang/pt.json
+++ b/assets/assets/lang/pt.json
@@ -13,7 +13,6 @@
   "myRecords": "Meus Registros",
   "settings": "Configurações",
   "logout": "Sair",
-
   "language": "Idioma",
   "theme": "Tema",
   "systemTheme": "Tema do Sistema",
@@ -21,7 +20,6 @@
   "darkTheme": "Tema Escuro",
   "submit": "Enviar",
   "cancel": "Cancelar",
-
   "ok": "OK",
   "noData": "Sem Dados",
   "dataTable": "Tabela de Dados",
@@ -54,9 +52,7 @@
   "acceptToAppearText": "Concordo em aparecer no aplicativo como especialista para que outros usuários possam me encontrar",
   "submitButton": "Enviar e entrar com Google",
   "dataSubmittedMessage": "Dados enviados com sucesso",
-
   "noteLoginResearcher": "Nota: Da próxima vez, você pode entrar como usuário normal",
-
   "name": "Nome",
   "degree": "Grau",
   "experience": "Anos de Experiência",
@@ -103,7 +99,6 @@
   "source": "Fonte",
   "progress": "Progresso",
   "title": "Título",
-
   "description": "Descrição",
   "creator": "Criador",
   "inCollection": "Na Coleção",
@@ -208,7 +203,6 @@
   "enterCity": "Digite a cidade",
   "enterState": "Digite o estado",
   "enterCountry": "Digite o país",
-
   "enterPrice": "Digite o preço ou selecione Grátis",
   "enterOrganizer": "Digite o organizador",
   "targetAudience": "Público-alvo",
@@ -249,8 +243,6 @@
   "acceptTermsText": "Ao clicar no botão 'Enviar e entrar com Google', você concorda com os termos e condições do aplicativo",
   "termsAndConditionsTitle": "Termos e Condições",
   "termsAndConditionsContent": "Ao usar este aplicativo, você concorda com os seguintes termos e condições:\n\n1. Os dados fornecidos pelo aplicativo são apenas para fins informativos. Os desenvolvedores do aplicativo não são responsáveis pela precisão dos dados.\n\n2. Os desenvolvedores do aplicativo não são responsáveis pelo conteúdo das imagens e modelos 3D fornecidos pelo aplicativo.\n\n3. Os desenvolvedores do aplicativo não são responsáveis pelo conteúdo dos links externos fornecidos pelo aplicativo.\n\n4. Os desenvolvedores do aplicativo reservam-se o direito de incluir anúncios no aplicativo para cobrir os custos de manutenção e desenvolvimento do projeto.\n\n5. Os desenvolvedores do aplicativo reservam-se o direito de modificar os termos e condições do aplicativo a qualquer momento, sem aviso prévio.\n\n6. Os desenvolvedores do aplicativo reservam-se o direito de bloquear usuários que não cumpram os termos e condições do aplicativo.\n\n7. As informações fornecidas pelos usuários do aplicativo serão usadas exclusivamente para a operação e podem ser usadas para fins estatísticos e de pesquisa e podem estar disponíveis para outros usuários do aplicativo, por isso os usuários devem ter cuidado com as informações que fornecem.\n\n8. Seus dados serão armazenados em um serviço de terceiros (Google Firebase) e serão usados para autenticar você no aplicativo. Os desenvolvedores do aplicativo não são responsáveis pela segurança dos dados armazenados no serviço de terceiros.",
-
-
   "isMultyDayEvent": "Evento de vários dias",
   "eventEndDateTime": "Data e hora de término do evento",
   "selectEventDateTime": "Selecionar data e hora do evento",
@@ -310,7 +302,6 @@
   "taxon": "Táxon",
   "pbdbOccurrenceId": "ID de Ocorrência PBDB",
   "viewFullDetails": "Ver Detalhes Completos",
-  "member": "Membro",
   "reference": "Referência",
   "viewMediaAndReferences": "Ver Mídia e Referências",
   "viewOnApp": "Ver em Onde está meu fóssil",
@@ -344,7 +335,6 @@
   "selectType": "Por favor, selecione um tipo",
   "selectDeadline": "Por favor, selecione um prazo",
   "enterInstitution": "Por favor, digite uma instituição",
-
   "enterRequirements": "Por favor, digite os requisitos",
   "enterApplicationUrl": "Por favor, digite uma URL de inscrição",
   "enterContactEmail": "Por favor, digite um e-mail de contato",
@@ -357,6 +347,10 @@
   "opportunityIntroText": "Enviar uma nova oportunidade paleontológica",
   "opportunityLoginRequired": "Você precisa estar logado para enviar uma oportunidade",
   "selectLocationOnMap": "Selecionar localização no mapa",
+  "searchLocation": "Procurar por uma localização...",
+  "noLocationsFound": "Nenhuma localização encontrada",
+  "confirm": "Confirmar",
+  "myLocation": "Minha localização",
   "selectColor": "Selecionar Cor",
   "changeChartColor": "Mudar Cor do Gráfico",
   "filterTerms": "Filtrar Termos",
@@ -376,20 +370,117 @@
   "ma": "Ma",
   "stratigraphicUnit": "Unidade Estratigráfica",
   "geochronologicUnit": "Unidade Geocronológica",
-
   "ratifiedGSSPCategories": "Seção e Ponto de Estratótipo de Limite Global",
   "ratifiedGSSACategories": "Idade Estratigráfica Padrão Global",
   "subUnits": "Subunidades",
   "searchTimeUnits": "Pesquisar unidades de tempo...",
   "noResultsFound": "Nenhum resultado encontrado para",
-
   "noDataAvailable": "Nenhum dado disponível",
-
   "eon": "Éon",
   "era": "Era",
   "period": "Período",
   "epoch": "Época",
-  "age": "Idade"
+  "age": "Idade",
+  "geologicalPeriod": "Período Geológico",
+  "comments": "Comentários",
+  "dataSources": "Fontes de Dados",
+  "geologicalDataSources": "Fontes de dados geológicos:",
+  "sourceId": "ID da Fonte:",
+  "aboutGeologyData": "Sobre os Dados Geológicos",
+  "andesite": "Andesito",
+  "arkose": "Arkose",
+  "basalt": "Basalto",
+  "bedrock": "Rocha-mãe",
+  "breccia": "Brecha",
+  "cambrian": "Cambriano",
+  "carboniferous": "Carbonífero",
+  "cenozoic": "Cenozoico",
+  "chert": "Sílex",
+  "claystone": "Argilito",
+  "coal": "Carvão",
+  "conglomerate": "Conglomerado",
+  "cretaceous": "Cretáceo",
+  "dacite": "Dacito",
+  "devonian": "Devoniano",
+  "diorite": "Diorito",
+  "dolomite": "Dolomita",
+  "dolostone": "Dolomito",
+  "enterDescription": "Digite a descrição",
+  "errorProfileLinkLabel": "Erro no link do perfil",
+  "evaporite": "Evaporito",
+  "gabbro": "Gabro",
+  "geologicalInfo": "Informações Geológicas",
+  "geology": "Geologia",
+  "geologyDataDescription": "Dados geológicos fornecidos pelo MacroStrat, uma plataforma de dados geológicos que compila informações sobre unidades rochosas e suas propriedades.",
+  "geologyDataSource": "Fonte dos dados geológicos: MacroStrat (https://macrostrat.org)",
+  "geologyFeatureDescription": "Esta funcionalidade permite visualizar dados geológicos sobrepostos ao mapa, fornecendo contexto sobre as unidades rochosas na área selecionada.",
+  "geologyStep1": "Ative a camada de geologia usando o interruptor no menu de camadas",
+  "geologyStep2": "Ajuste a opacidade da camada conforme necessário",
+  "geologyStep3": "Toque em qualquer área no mapa para ver informações geológicas detalhadas",
+  "geologyStep4": "Use o botão 'Ver Estratigrafia' para explorar a coluna estratigráfica da área",
+  "gneiss": "Gnaisse",
+  "granite": "Granito",
+  "graywacke": "Grauvaque",
+  "gypsum": "Gesso",
+  "hideGeologyLayer": "Ocultar Camada de Geologia",
+  "hornfels": "Hornfels",
+  "howToUseGeologyLayer": "Como Usar a Camada de Geologia",
+  "igneous": "Ígnea",
+  "jurassic": "Jurássico",
+  "limestone": "Calcário",
+  "loadingStratigraphicData": "Carregando dados estratigráficos...",
+  "loadingUnits": "Carregando unidades...",
+  "marble": "Mármore",
+  "marl": "Marga",
+  "mesozoic": "Mesozoico",
+  "metamorphic": "Metamórfica",
+  "migmatite": "Migmatito",
+  "millionYearsAgo": "milhões de anos atrás",
+  "mudstone": "Mudstone",
+  "multipleColumnsFound": "Múltiplas colunas encontradas",
+  "neogene": "Neógeno",
+  "newFeature": "Nova Funcionalidade",
+  "noGeologyData": "Nenhum dado geológico disponível para esta localização",
+  "noStratigraphicData": "Nenhum dado estratigráfico disponível",
+  "none": "Nenhum",
+  "obsidian": "Obsidiana",
+  "opacity": "Opacidade",
+  "ordovician": "Ordoviciano",
+  "paleogene": "Paleógeno",
+  "paleozoic": "Paleozoico",
+  "peridotite": "Peridotito",
+  "permian": "Permiano",
+  "phyllite": "Filito",
+  "plutonic": "Plutônica",
+  "precambrian": "Pré-cambriano",
+  "pumice": "Pedra-pomes",
+  "quartzite": "Quartzito",
+  "quaternary": "Quaternário",
+  "retry": "Tentar novamente",
+  "rhyolite": "Riolito",
+  "rockType": "Tipo de Rocha",
+  "salt": "Sal",
+  "sandstone": "Arenito",
+  "schist": "Xisto",
+  "sedimentary": "Sedimentar",
+  "sedimentaryRocks": "Rochas Sedimentares",
+  "selectColumns": "Selecionar Colunas",
+  "serpentinite": "Serpentinito",
+  "shale": "Folhelho",
+  "showGeologyLayer": "Mostrar Camada de Geologia",
+  "siltstone": "Siltito",
+  "silurian": "Siluriano",
+  "slate": "Ardósia",
+  "stratigraphicColumn": "Coluna Estratigráfica",
+  "stratigraphy": "Estratigrafia",
+  "switchToEqualHeights": "Alternar para Alturas Iguais",
+  "switchToProportionalHeights": "Alternar para Alturas Proporcionais",
+  "syenite": "Sienito",
+  "triassic": "Triássico",
+  "tuff": "Tufo",
+  "units": "Unidades",
+  "unknownUnit": "Unidade Desconhecida",
+  "viewStratigraphy": "Ver Estratigrafia",
+  "visitMacrostratWebsite": "Visitar site do MacroStrat",
+  "volcanic": "Vulcânica"
 }
-
-
