--- a/assets/assets/lang/zh_CN.json
+++ b/assets/assets/lang/zh_CN.json
@@ -13,7 +13,6 @@
   "myRecords": "我的记录",
   "settings": "设置",
   "logout": "登出",
-
   "language": "语言",
   "theme": "主题",
   "systemTheme": "系统主题",
@@ -21,7 +20,6 @@
   "darkTheme": "深色主题",
   "submit": "提交",
   "cancel": "取消",
-
   "ok": "确定",
   "noData": "无数据",
   "dataTable": "数据表",
@@ -110,9 +108,7 @@
   "source": "来源",
   "progress": "进度",
   "title": "标题",
-
   "creator": "创建者",
-
   "shortDescription": "简短描述",
   "user": "用户",
   "scientificName": "科学名称",
@@ -213,7 +209,6 @@
   "enterCity": "输入城市",
   "enterState": "输入州/省",
   "enterCountry": "输入国家",
-
   "enterPrice": "输入价格或选择免费",
   "enterOrganizer": "输入组织者",
   "targetAudience": "目标受众",
@@ -255,7 +250,6 @@
   "museumDetails": "博物馆详情",
   "database": "数据库",
   "deleteLocalDatabases": "删除本地数据库",
-
   "translators": "翻译者",
   "supportUs": "支持我们",
   "resetTree": "重置树",
@@ -300,7 +294,6 @@
   "taxon": "分类单元",
   "pbdbOccurrenceId": "PBDB出现ID",
   "viewFullDetails": "查看完整详情",
-  "member": "会员",
   "reference": "参考",
   "viewMediaAndReferences": "查看媒体和参考",
   "location": "位置",
@@ -326,7 +319,6 @@
   "contactEmail": "联系邮箱",
   "visible": "可见",
   "selectLocation": "选择位置",
-
   "confirmUpload": "确认上传",
   "uploadingOpportunities": "正在上传机会...",
   "validationIssues": "验证问题",
@@ -335,7 +327,6 @@
   "selectType": "请选择类型",
   "selectDeadline": "请选择截止日期",
   "enterInstitution": "请输入机构",
-
   "enterRequirements": "请输入要求",
   "enterApplicationUrl": "请输入申请URL",
   "enterContactEmail": "请输入联系邮箱",
@@ -347,6 +338,10 @@
   "opportunityIntroText": "提交新的古生物学机会",
   "opportunityLoginRequired": "你需要登录才能提交机会",
   "selectLocationOnMap": "在地图上选择位置",
+  "searchLocation": "搜索位置...",
+  "noLocationsFound": "未找到位置",
+  "confirm": "确认",
+  "myLocation": "我的位置",
   "selectColor": "选择颜色",
   "changeChartColor": "更改图表颜色",
   "filterTerms": "过滤词",
@@ -371,15 +366,121 @@
   "subUnits": "子单位",
   "searchTimeUnits": "搜索时间单位...",
   "noResultsFound": "未找到结果",
-
   "noDataAvailable": "无可用数据",
-
   "eon": "宙",
   "era": "代",
   "period": "纪",
   "epoch": "世",
-  "age": "期"
+  "age": "期",
+  "geologicalPeriod": "地质时期",
+  "comments": "评论",
+  "dataSources": "数据来源",
+  "geologicalDataSources": "地质数据来源：",
+  "sourceId": "来源ID：",
+  "aboutGeologyData": "关于地质数据",
+  "acceptTermsText": "接受条款文本",
+  "andesite": "安山岩",
+  "arkose": "长石砂岩",
+  "basalt": "玄武岩",
+  "bedrock": "基岩",
+  "breccia": "角砾岩",
+  "cambrian": "寒武纪",
+  "carboniferous": "石炭纪",
+  "cenozoic": "新生代",
+  "chert": "燧石",
+  "claystone": "粘土岩",
+  "coal": "煤",
+  "conglomerate": "砾岩",
+  "continue": "继续",
+  "cretaceous": "白垩纪",
+  "dacite": "英安岩",
+  "dataManager": "数据管理员",
+  "description": "描述",
+  "devonian": "泥盆纪",
+  "diorite": "闪长岩",
+  "dolomite": "白云石",
+  "dolostone": "白云岩",
+  "enterDescription": "输入描述",
+  "evaporite": "蒸发岩",
+  "followUs": "关注我们",
+  "gabbro": "辉长岩",
+  "geologicalInfo": "地质信息",
+  "geology": "地质学",
+  "geologyDataDescription": "地质数据由MacroStrat提供，这是一个编译岩石单元及其属性信息的地质数据平台。",
+  "geologyDataSource": "地质数据来源：MacroStrat (https://macrostrat.org)",
+  "geologyFeatureDescription": "此功能允许在地图上叠加显示地质数据，为所选区域的岩石单元提供背景信息。",
+  "geologyStep1": "使用图层菜单中的开关激活地质图层",
+  "geologyStep2": "根据需要调整图层不透明度",
+  "geologyStep3": "点击地图上的任何区域查看详细的地质信息",
+  "geologyStep4": "使用'查看地层'按钮探索该区域的地层柱状图",
+  "gneiss": "片麻岩",
+  "granite": "花岗岩",
+  "graywacke": "杂砂岩",
+  "gypsum": "石膏",
+  "hideGeologyLayer": "隐藏地质图层",
+  "hornfels": "角岩",
+  "howToUseGeologyLayer": "如何使用地质图层",
+  "igneous": "火成岩",
+  "inCollection": "在收藏中",
+  "jurassic": "侏罗纪",
+  "limestone": "石灰岩",
+  "loadingStratigraphicData": "正在加载地层数据...",
+  "loadingUnits": "正在加载单元...",
+  "localDatabasesCleared": "本地数据库已清空",
+  "marble": "大理岩",
+  "marl": "泥灰岩",
+  "mesozoic": "中生代",
+  "metamorphic": "变质岩",
+  "migmatite": "混合岩",
+  "millionYearsAgo": "百万年前",
+  "mudstone": "泥岩",
+  "multipleColumnsFound": "发现多个柱状图",
+  "neogene": "新近纪",
+  "newFeature": "新功能",
+  "noGeologyData": "此位置没有可用的地质数据",
+  "noStratigraphicData": "没有可用的地层数据",
+  "none": "无",
+  "obsidian": "黑曜岩",
+  "opacity": "不透明度",
+  "ordovician": "奥陶纪",
+  "paleogene": "古近纪",
+  "paleozoic": "古生代",
+  "peridotite": "橄榄岩",
+  "permian": "二叠纪",
+  "phyllite": "千枚岩",
+  "plutonic": "深成岩",
+  "precambrian": "前寒武纪",
+  "pumice": "浮石",
+  "quartzite": "石英岩",
+  "quaternary": "第四纪",
+  "retry": "重试",
+  "rhyolite": "流纹岩",
+  "rockType": "岩石类型",
+  "salt": "盐",
+  "sandstone": "砂岩",
+  "schist": "片岩",
+  "sedimentary": "沉积岩",
+  "sedimentaryRocks": "沉积岩类",
+  "selectColumns": "选择柱状图",
+  "serpentinite": "蛇纹岩",
+  "shale": "页岩",
+  "showGeologyLayer": "显示地质图层",
+  "siltstone": "粉砂岩",
+  "silurian": "志留纪",
+  "slate": "板岩",
+  "stratigraphicColumn": "地层柱状图",
+  "stratigraphy": "地层学",
+  "switchToEqualHeights": "切换到等高度",
+  "switchToProportionalHeights": "切换到比例高度",
+  "syenite": "正长岩",
+  "termsAndConditionsContent": "条款和条件内容",
+  "termsAndConditionsTitle": "条款和条件标题",
+  "translations": "翻译",
+  "triassic": "三叠纪",
+  "tuff": "凝灰岩",
+  "units": "单元",
+  "unknownUnit": "未知单元",
+  "viewStratigraphy": "查看地层",
+  "visitMacrostratWebsite": "访问MacroStrat网站",
+  "volcanic": "火山岩"
 }
-
-
-
